--- a/package.json
+++ b/package.json
@@ -9,13 +9,42 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
+    "@react-native-material/core": "^1.3.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.4.0",
+    "deprecated-react-native-prop-types": "^4.1.0",
     "expo": "~48.0.15",
+    "expo-camera": "~13.2.1",
+    "expo-image-picker": "^14.1.1",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.2.9",
+    "hermes-engine": "^0.5.2-rc1",
+    "mime": "^3.0.0",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.7",
+    "react-native-paper": "^5.7.2",
+    "react-native-progress-steps": "^1.3.4",
+    "react-native-razorpay": "^2.3.0",
+    "react-native-snackbar": "^2.6.2",
+    "react-native-snackbar-component": "^1.1.12",
+    "react-native-step-indicator": "^1.0.3",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.10",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "remote-redux-devtools": "^0.5.16",
+    "source-map-loader": "^4.0.1"
   },
-  "private": true
+  "private": true,
+  "proxy": "http://localhost:9001"
 }
